--- a/.github/workflows/ofrp.yml
+++ b/.github/workflows/ofrp.yml
@@ -62,6 +62,14 @@ jobs:
           sudo bash setup/install_android_sdk.sh
         working-directory: ${{ steps.pwd.outputs.workspace-folder }}
 
+      - name: Use Python2
+        uses: MatteoH2O1999/setup-python@v6
+        with:
+          python-version: '2.7.6'
+          check-latest: true
+          allow-build: info
+          cache-build: true
+
       - name: Install OpenJDK
         uses: actions/setup-java@v4
         with:
